<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<data>
    <variable
        name="logininfo"
        type="com.udacity.shoestore.login.LoginViewModel" />
    
</data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="@+id/editTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
        tools:context=".login.LoginFragment">


        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:labelFor="@id/editTextEmail"
            android:text="@string/email"
            android:textSize="23sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextEmail"
            app:layout_constraintEnd_toStartOf="@+id/editTextEmail"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:labelFor="@id/editTextPassword"
            android:text="@string/Password"
            android:textSize="23sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/editTextPassword"
            app:layout_constraintEnd_toStartOf="@+id/editTextPassword"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewEmail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="password"
            android:ems="10"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintBottom_toTopOf="@+id/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textViewPassword"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <Button
            android:id="@+id/create"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="#4CAF50"
            android:fontFamily="@font/aclonica"
            android:shadowColor="#3D5AFE"
            android:text="@string/login"
            android:textColor="#263238"
            android:onClick="@{() -> logininfo.OnLogin()}"
            app:layout_constraintBaseline_toBaselineOf="@+id/login"
            app:layout_constraintEnd_toStartOf="@+id/login"
            app:layout_constraintHorizontal_bias="0.634"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/login"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="72dp"
            android:layout_marginBottom="180dp"
            android:background="#00B0FF"
            android:fontFamily="@font/aclonica"
            android:text="@string/create"
            android:onClick="@{() -> logininfo.OnLogin()}"
            android:textAppearance="@style/TextAppearance.AppCompat.Button"
            android:textColor="#4E342E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>